add postgres support, turning DATABASE_URL into separate env variables, which are used in prod.cfg

--- a/cabal.config
+++ b/cabal.config
@@ -13,18 +13,19 @@ constraints: HUnit ==1.2.5.2,
              blaze-builder-enumerator ==0.2.0.6,
              blaze-html ==0.7.0.3,
              blaze-markup ==0.6.1.1,
+             blaze-textual ==0.2.0.9,
              byteable ==0.1.1,
              bytestring ==0.10.4.0,
              bytestring-mmap ==0.2.2,
              case-insensitive ==1.2.0.1,
              cereal ==0.4.1.0,
-             cipher-aes ==0.2.8,
+             cipher-aes ==0.2.9,
              clientsession ==0.9.1,
              comonad ==4.2.2,
              configurator ==0.3.0.0,
              containers ==0.5.5.1,
              contravariant ==0.6.1.1,
-             cprng-aes ==0.5.2,
+             cprng-aes ==0.6.0,
              crypto-api ==0.13.2,
              crypto-cipher-types ==0.0.9,
              crypto-random ==0.0.8,
@@ -35,7 +36,7 @@ constraints: HUnit ==1.2.5.2,
              distributive ==0.4.4,
              dlist ==0.7.1,
              either ==4.3.1,
-             entropy ==0.3.3,
+             entropy ==0.3.4,
              enumerator ==0.4.20,
              errors ==1.4.7,
              exceptions ==0.6.1,
@@ -44,20 +45,25 @@ constraints: HUnit ==1.2.5.2,
              free ==4.9,
              ghc-prim ==0.3.1.0,
              hashable ==1.2.2.0,
-             heist ==0.13.1.2,
+             heist ==0.14.0.1,
              heroku-snap-example ==0.1,
              integer-gmp ==0.5.1.0,
              lens ==4.1.2.1,
              logict ==0.6.0.2,
+             map-syntax ==0.2,
              monad-control ==0.3.3.0,
              monads-tf ==0.1.0.2,
              mtl ==2.1.3.1,
              mwc-random ==0.13.2.0,
              nats ==0.2,
              network ==2.6.0.2,
+             network-info ==0.2.0.5,
              old-locale ==1.0.0.6,
+             old-time ==1.1.0.2,
              parallel ==3.2.0.4,
              parsec ==3.1.7,
+             postgresql-libpq ==0.9.0.1,
+             postgresql-simple ==0.4.7.0,
              prelude-extras ==0.4,
              pretty ==1.1.1.1,
              primitive ==0.5.4.0,
@@ -68,18 +74,20 @@ constraints: HUnit ==1.2.5.2,
              reflection ==1.5.1,
              regex-base ==0.93.2,
              regex-posix ==0.95.2,
+             resource-pool-catchio ==0.2.1.0,
              rts ==1.0,
              safe ==0.3.8,
-             scientific ==0.3.3.1,
+             scientific ==0.3.3.2,
              securemem ==0.1.3,
              semigroupoids ==4.0.4,
              semigroups ==0.15.3,
              setenv ==0.1.1.1,
              skein ==1.0.9,
-             snap ==0.13.2.9,
+             snap ==0.13.3.1,
              snap-core ==0.9.6.3,
              snap-loader-static ==0.9.0.2,
              snap-server ==0.9.4.5,
+             snaplet-postgresql-simple ==0.5,
              split ==0.2.2,
              stm ==2.4.3,
              syb ==0.4.2,
@@ -94,6 +102,7 @@ constraints: HUnit ==1.2.5.2,
              unix-compat ==0.4.1.3,
              unordered-containers ==0.2.5.1,
              utf8-string ==0.3.8,
+             uuid ==1.3.4,
              vector ==0.10.12.1,
              vector-algorithms ==0.6.0.3,
              void ==0.6.1,
