--- a/heroku-snap-example.cabal
+++ b/heroku-snap-example.cabal
@@ -23,17 +23,20 @@ Executable heroku-snap-example
   main-is: Main.hs
 
   Build-depends:
-    bytestring                >= 0.9.1   && < 0.11,
-    heist                     >= 0.13    && < 0.14,
-    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
-    mtl                       >= 2       && < 3,
-    snap                      >= 0.13    && < 0.14,
-    snap-core                 >= 0.9     && < 0.11,
-    snap-server               >= 0.9     && < 0.11,
-    snap-loader-static        >= 0.9     && < 0.10,
-    text                      >= 0.11    && < 1.2,
-    time                      >= 1.1     && < 1.5,
-    xmlhtml                   >= 0.1
+                bytestring                >= 0.9.1   && < 0.11,
+                heist                     >= 0.14    && < 0.15,
+                MonadCatchIO-transformers >= 0.2.1   && < 0.4,
+                mtl                       >= 2       && < 3,
+                snap                      >= 0.13    && < 0.14,
+                snap-core                 >= 0.9     && < 0.11,
+                snap-server               >= 0.9     && < 0.11,
+                snap-loader-static        >= 0.9     && < 0.10,
+                text                      >= 0.11    && < 1.2,
+                time                      >= 1.1     && < 1.5,
+                xmlhtml                   >= 0.1,
+                attoparsec                >= 0.12    && < 0.13,
+                snaplet-postgresql-simple >= 0.5     && < 0.6
+
 
   if flag(old-base)
     build-depends:
